Fix media query to prevent game board from being too small.

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 1100px){
+@media only screen and (max-width: 1200px){
     #game-container {
         width: 66%;
     }
